--- a/PythonAPIWeatherPy_Final.ipynb
+++ b/PythonAPIWeatherPy_Final.ipynb
@@ -1146,6 +1146,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This scatterplot is comparing a city's latitude to the Humidity percentage. From the scatterplot, you can determine that from latitudes 0 to 20, the humidity percentage is concentrated between 40 and 80 percent. You can also see that there is a concentration of extremely high humidity percentages at latitudes 40 to 80,0, and from -20 to -40. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " "
    ]
   },
@@ -1205,6 +1212,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This scatterplot is comparing a city's latitude to the percentage of cloudiness. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n"
    ]
@@ -1258,6 +1272,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This scatterplot is observing the Wind Speed in relation to the city latitude. From the scatterplot, you can tell that there is a high concentration of lower wind speeds from latitudes -20 to 20. It also shows that wind speeds that range from 15 mph to 35 mph occurs more likely in latitudes that range from -20 to -40 and 20 to 60. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " "
    ]
   },
@@ -1269,6 +1290,34 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# -------------------------------------------------------------------------------------------------------------#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regression Analysis "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
